--- a/main.css
+++ b/main.css
@@ -2,8 +2,8 @@
   box-sizing: border-box; 
 }
 body{
-  background-color: darkgreen;
-  color: lightsalmon;
+  background-color: darkblue;
+  color: deepskyblue;
 }
 .topnav{
   background-color: darkcyan;
